stylized invalid-zipcode page and added link to external resource

--- a/src/main/resources/templates/invalid-zipcode.html
+++ b/src/main/resources/templates/invalid-zipcode.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Order Failure</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<title>Out of Area Code</title>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
+	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 	<div class="container confirmation">
-		<div class="message">
-			<h1>
-				Invalid Zipcode
-			</h1>
-			<p>Please check your zipcode input try again, if this continues, please contact the pantry.</p>
+		<div class="message invalid">
+			<h1>Out of Area Code</h1>
+			<br />
+			<p>Sorry, the Broad Street Food Pantry does not service your zip code.</p>
+			<p>For help locating a pantry in your area, please visit <a href="https://handsoncentralohio.org/locate-services/">Hands On Central Ohio</a>.</p>
 		</div>
 	</div>
 </body>
