fixed comma on invalid zip code page

--- a/src/main/resources/templates/invalid-zipcode.html
+++ b/src/main/resources/templates/invalid-zipcode.html
@@ -14,7 +14,7 @@
 			<h1>Out of Area Code</h1>
 			<br />
 			<p>Sorry, the Broad Street Food Pantry does not service your zip code.</p>
-			<p>For help locating a pantry in your area, please visit <a href="https://handsoncentralohio.org/locate-services/">Hands On Central Ohio</a>.</p>
+			<p>For help locating a pantry in your area please visit <a href="https://handsoncentralohio.org/locate-services/">Hands On Central Ohio</a>.</p>
 		</div>
 	</div>
 </body>
