fixed typo on invalid zipcode page and user-form

--- a/src/main/resources/templates/invalid-zipcode.html
+++ b/src/main/resources/templates/invalid-zipcode.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>Out of Area Code</title>
+	<title>Out of Area</title>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
@@ -11,9 +11,9 @@
 <body>
 	<div class="container confirmation">
 		<div class="message invalid">
-			<h1>Out of Area Code</h1>
+			<h1>Out of Area</h1>
 			<br />
-			<p>Sorry, the Broad Street Food Pantry does not service your zip code.</p>
+			<p>Sorry, Broad Street Food Pantry does not service your zip code.</p>
 			<p>For help locating a pantry in your area please visit <a href="https://handsoncentralohio.org/locate-services/">Hands On Central Ohio</a>.</p>
 		</div>
 	</div>
