--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -65,7 +65,7 @@
 
 					<br />
 
-					<label for="zipCodeInput">Zip Code:</label>
+					<label for="zipCodeInput">Zip code:</label>
 					<input type="text" name="zipCodeInput" id="zipCodeInput" required="true"/>
 
 					<br />
