added phone number and email fields to user class and updated user to form to take phone number and input

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -62,7 +62,7 @@
 
 					<label for="address">Address:</label>
 					<input type="text" name="address" id="address" required="true"/>
-
+					
 					<p>Zip code:</p>
 					<select name="zipCode" required="true">
 						<option selected="true" disabled="true" hidden="true" value="">Select...</option>
@@ -75,6 +75,12 @@
 						<option value="Other">Other</option>
 					</select>
 
+					<label for="phoneNumber">Phone number:</label>
+					<input type="text" name="phoneNumber" id="phoneNumber" required="true"/>
+					
+					<label for="emailAddress">Email Address:</label>
+					<input type="text" name="emailAddress" id="emailAddress" required="true"/>
+					
 					<p>Total family size:</p>
 					<select class="familySizeMenu" name="familySize" required="true">
 						<option selected="true" disabled="true" hidden="true" value="">Select...</option>
