Added text to label of category name

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -14,7 +14,7 @@
         <section class="category-creator">
             <h2>Category Creator</h2>
             <form action="/admin/categories" method="post">
-                <label for="category-name"></label>
+                <label for="category-name">Category name</label>
                 <input id="category-name" type="text" />
                 <input type="submit" />
             </form>
