Added name to input

--- a/src/main/resources/templates/administration/categories.html
+++ b/src/main/resources/templates/administration/categories.html
@@ -15,7 +15,7 @@
             <h2>Category Creator</h2>
             <form action="/admin/categories" method="post">
                 <label for="category-name">Category name</label>
-                <input id="category-name" type="text" />
+                <input id="category-name" type="text" name="categoryName" />
                 <input type="submit" />
             </form>
         </section>
