--- a/src/main/resources/templates/admin/priced-product.html
+++ b/src/main/resources/templates/admin/priced-product.html
@@ -12,6 +12,8 @@
     <div class="container admin product">
         <p th:text="${product.name}" />
         <p th:text="${product.image}" />
+        <p th:text="${product.maximumQuantity}" />
+        <p th:text="${product.price}" />
     </div>
 </body>
 </html>
