--- a/src/main/resources/templates/admin/limited-product.html
+++ b/src/main/resources/templates/admin/limited-product.html
@@ -10,9 +10,18 @@
 </head>
 <body>
     <div class="container admin product">
-        <p th:text="${product.name}" />
-        <p th:text="${product.image}" />
-        <p th:text="${product.maximumQuantity}" />
+        <p>
+            <span>Product Name:</span>
+            <span th:text="${product.name}" />
+        </p>
+        <p>
+            <span>Image Path:</span>
+            <span th:text="${product.image}" />
+        </p>
+        <p>
+            <span>Maximum Quantity:</span>
+            <span th:text="${product.maximumQuantity}" />
+        </p>
     </div>
 </body>
 </html>
