Added a header to each of the products allowing for going back

--- a/src/main/resources/templates/admin/priced-product.html
+++ b/src/main/resources/templates/admin/priced-product.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div class="container admin product">
+		<header>
+			<a th:href="@{'/admin/categories/' + ${product.category.id}}">Go Back</a>
+			<h1 th:text="${product.name}" />
+		</header>
         <p>
 			<span>Product Name:</span>
 			<span th:text="${product.name}" />
